Fix edit page Traffic Alert

--- a/code/dev/parts/trafficAlerts/edit.html
+++ b/code/dev/parts/trafficAlerts/edit.html
@@ -5,7 +5,7 @@
     </h2>
   </div>
 </div>
-<div class="row" ng-init="setModel(params.id)">
+<div class="row" ng-init="getTrafficAlert(params.id)">
   <div class="col-md-12">
     <div class="panel panel-default">
       <div class="panel-heading">
