--- a/code/dev/parts/trafficAlerts/directives/alertRuleTypeConfigs.html
+++ b/code/dev/parts/trafficAlerts/directives/alertRuleTypeConfigs.html
@@ -8,7 +8,7 @@
         <label for="spikeDirection" class="col-sm-2 control-label">Spike Direction *</label>
         <div class="col-sm-4">
           <select class="form-control inline-block half-width" id="destination_type" name="spikeDirection" ng-model="model.rule_config.spike_direction"
-            ng-disabled="_loading" ng-options="item.key for item in spikeDirections track by item.value" required>
+            ng-disabled="_loading" ng-options="item as item.key for item  in spikeDirections track by item" required>
             <option disabled value="">--- Select Spike Direction ---</option>
           </select>
           <label for="spikeDirection" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Select the direction of the spike event, if set to 'up', when requests spike up, the alert will be triggred.">
@@ -81,7 +81,7 @@
         <label for="ruleConfigResponses" class="col-sm-2 control-label">Number Of Responses*</label>
         <div class="col-sm-4">
           <input type="number" class="form-control inline-block half-width" id="ruleConfigResponses" placeholder="1" name="ruleConfigResponses"
-            ng-model="model.rule_config.responses" ng-max="150" ng-min="1" min="1" max="150" ng-disabled="_loading" required>
+            ng-model="model.rule_config.responses" ng-max="10000000" ng-min="1" min="1" max="10000000" ng-disabled="_loading" required>
           <label for="ruleConfigResponses" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The amount of responses with the configured status code that will trigger the alert">
             <i class="fa fa-question-circle"></i>
           </label>
