--- a/code/dev/parts/trafficAlerts/directives/alertRuleTypeConfigs.html
+++ b/code/dev/parts/trafficAlerts/directives/alertRuleTypeConfigs.html
@@ -6,9 +6,9 @@
     <div class="panel-body">
       <div class="form-group" ng-class="{ 'has-error': formEditRuleType.spikeDirection.$invalid && formEditRuleType.spikeDirection.$dirty }">
         <label for="spikeDirection" class="col-sm-2 control-label">Spike Direction *</label>
-        <div class="col-sm-4">
-          <select class="form-control inline-block half-width" id="destination_type" name="spikeDirection" ng-model="model.rule_config.spike_direction"
-            ng-disabled="_loading" ng-options="item as item.key for item  in spikeDirections track by item" required>
+        <div class="col-sm-10">
+          <select class="form-control inline-block" id="spikeDirection" name="spikeDirection" ng-model="model.rule_config.spike_direction"
+            ng-disabled="_loading" ng-options="name as key for (name,key) in spikeDirections" required>
             <option disabled value="">--- Select Spike Direction ---</option>
           </select>
           <label for="spikeDirection" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Select the direction of the spike event, if set to 'up', when requests spike up, the alert will be triggred.">
@@ -21,11 +21,11 @@
       </div>
       <div class="form-group" ng-class="{ 'has-error': formEditRuleType.spikeAmount.$invalid && formEditRuleType.spikeAmount.$dirty }">
         <label for="spikeAmount" class="col-sm-2 control-label">Spike Amount *</label>
-        <div class="col-sm-4">
-          <input type="number" class="form-control inline-block half-width" id="Host" name="spikeAmount" placeholder="Spike Amount"
-            ng-model="model.rule_config.spike_amount" ng-max="150" ng-min="1" max="150" min="1" ng-disabled="_loading" required>
+        <div class="col-sm-10">
+          <input type="number" class="form-control inline-block" id="spikeAmount" name="spikeAmount" placeholder="Spike Amount" ng-model="model.rule_config.spike_amount"
+            ng-max="150" ng-min="1" max="150" min="1" ng-disabled="_loading" required>
           <label for="spikeAmount" class="text text-info inline-block" popover-append-to-body="{{true}}" popover-trigger="mouseenter"
-            uib-popover="Host name for FTP, SFTP and ElasticSearch destinations, S3 bucket name for S3 destination">
+            uib-popover="TODO TEXT --> Host name for FTP, SFTP and ElasticSearch destinations, S3 bucket name for S3 destination">
             <i class="fa fa-question-circle"></i>
           </label>
           <div class="error-messages" ng-messages="formEditRuleType.spikeAmount.$error" role="alert" ng-messages-multiple>
@@ -67,7 +67,7 @@
       <div class="form-group" ng-class="{ 'has-error': formEditRuleType.ruleConfigStatusCode.$invalid && formEditRuleType.ruleConfigStatusCode.$dirty }">
         <label for="ruleConfigStatusCode" class="col-sm-2 control-label">Status Code *</label>
         <div class="col-sm-4">
-          <input type="number" class="form-control half-width inline-block" id="Host" placeholder="500" name="ruleConfigStatusCode"
+          <input type="number" class="form-control half-width inline-block" id="statusCode" placeholder="500" name="ruleConfigStatusCode"
             ng-model="model.rule_config.status_code" ng-maxlength="3" ng-minlength="1" ng-disabled="_loading" required>
           <label for="ruleConfigStatusCode" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The status code that will trigger the alert">
             <i class="fa fa-question-circle"></i>
