--- a/code/dev/parts/notifications/modals/edit-name-notification-list.tpl.html
+++ b/code/dev/parts/notifications/modals/edit-name-notification-list.tpl.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h3 class="modal-title">Edit Name Notification List</h3>
+  <h3 class="modal-title">Edit Notification List Name</h3>
 </div>
 <div class="modal-body">
   <form class="form-horizontal" name="currentNotificationListForm">
