--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -174,7 +174,7 @@
         <a ui-sref-active="active" ui-sref="index.accountSettings.groups" class="side-menu-sub-item" ng-if="!userService.isUser() && userService.hasAccessTo('groups')">
             <i class="sub-menu-icon fa fa-users"></i> Groups
           </a>
-        
+
         <a ui-sref-active="active" ui-sref="index.accountSettings.companies" class="side-menu-sub-item" ng-if="(userService.isReseller() || userService.isRevadmin()) && userService.hasAccessTo('accounts')">
             <i class="sub-menu-icon fa fa-list-alt"></i> Accounts</a>
         <a ui-sref-active="active" ui-sref="index.accountSettings.keys" class="side-menu-sub-item" ng-if="!userService.isUser() && userService.hasAccessTo('API_keys')">
@@ -189,10 +189,10 @@
         <a id="side-menu-sub-item__security-settings" ui-sref-active="active" ui-sref="index.accountSettings.2fa" class="side-menu-sub-item" href="#/2fa">
             <i class="sub-menu-icon fa fa-lock"></i> Security Settings
           </a>
-        <a ui-sref-active="active" ui-sref="index.accountSettings.notificationsList" class="side-menu-sub-item" id="side-menu-sub-item__notifications-list" ng-if="userService.isRevadmin()">
+        <a ui-sref-active="active" ui-sref="index.accountSettings.notificationsList" class="side-menu-sub-item" id="side-menu-sub-item__notifications-list">
             <i class="sub-menu-icon fa fa-server "></i>  Notification Lists
           </a>
-        <a ui-sref-active="active" ui-sref="index.accountSettings.trafficAlerts" class="side-menu-sub-item" id="side-menu-sub-item__traffic-alerts-list" ng-if="userService.isRevadmin()">
+        <a ui-sref-active="active" ui-sref="index.accountSettings.trafficAlerts" class="side-menu-sub-item" id="side-menu-sub-item__traffic-alerts-list">
             <i class="sub-menu-icon fa fa-server "></i>  Trafic Alerts
           </a>
         <a ui-sref-active="active" ui-sref="index.accountSettings.cdn-ip-blocks" class="side-menu-sub-item" id="side-menu-sub-item__cdn-ip-bloks">
