--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -189,10 +189,10 @@
         <a id="side-menu-sub-item__security-settings" ui-sref-active="active" ui-sref="index.accountSettings.2fa" class="side-menu-sub-item" href="#/2fa">
             <i class="sub-menu-icon fa fa-lock"></i> Security Settings
           </a>
-        <a ui-sref-active="active" ui-sref="index.accountSettings.notificationsList" class="side-menu-sub-item" id="side-menu-sub-item__notifications-list">
+        <a ui-sref-active="active" ui-sref="index.accountSettings.notificationsList" class="side-menu-sub-item" id="side-menu-sub-item__notifications-list" ng-if="!userService.isUser() && userService.hasAccessTo('notification_lists')">
             <i class="sub-menu-icon fa fa-server "></i>  Notification Lists
           </a>
-        <a ui-sref-active="active" ui-sref="index.accountSettings.trafficAlerts" class="side-menu-sub-item" id="side-menu-sub-item__traffic-alerts-list">
+        <a ui-sref-active="active" ui-sref="index.accountSettings.trafficAlerts" class="side-menu-sub-item" id="side-menu-sub-item__traffic-alerts-list" ng-if="!userService.isUser() && userService.hasAccessTo('traffic_alerts')">
             <i class="sub-menu-icon fa fa-server "></i>  Trafic Alerts
           </a>
         <a ui-sref-active="active" ui-sref="index.accountSettings.cdn-ip-blocks" class="side-menu-sub-item" id="side-menu-sub-item__cdn-ip-bloks">
