--- a/code/dev/parts/companies/account-resources.html
+++ b/code/dev/parts/companies/account-resources.html
@@ -28,8 +28,8 @@
               </form>
               <div class="form-group">
                 <button class="btn btn-success" id="btn-refresh-page-data" ng-disabled="_loading || isReload" ng-click="onClickRefresh()">
-             <i class="glyphicon glyphicon-refresh" ng-class="_loading ? 'spin' : ''"></i>&nbsp; Refresh
-                                    </button>
+                  <i class="glyphicon glyphicon-refresh" ng-class="_loading ? 'spin' : ''"></i>&nbsp; Refresh
+                </button>
               </div>
             </div>
           </div>
@@ -90,8 +90,8 @@
                     <td>
                       <a ng-href="#/apps/{{item.app_platform.toLocaleLowerCase()}}/edit/{{item.id}}" uisref=".edit({id: item.id})" ng-if="!item.loading"
                         uib-tooltip="Edit App">
-                  {{item.app_name}}
-                </a>
+                        {{item.app_name}}
+                      </a>
                     </td>
                     <td>{{item.app_platform}}</td>
                     <td>{{item.last_app_published_version}}</td>
@@ -184,13 +184,16 @@
                     <td>
                       <!-- TODO: delete uisref or use full state name and delete ng-href-->
                       <a ng-href="#/domains/edit/{{item.id}}" uisref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit Domain">
-                  {{item.domain_name}}
-                </a>
+                        {{item.domain_name}}
+                      </a>
                     </td>
                     <td>
                       <button class="btn  btn-xs btn-primary" clipboard text="item.cname" on-copied="copyCallback()" on-error="copyCallback(err)"
-                        style="vertical-align: initial;" uib-tooltip="Click to copy the CNAME to the clipboard" tooltip-placement="top"><i class="fa fa-files-o"></i></button>
-                      <span title="{{item.cname}}"> {{item.cname}} </span></td>
+                        style="vertical-align: initial;" uib-tooltip="Click to copy the CNAME to the clipboard" tooltip-placement="top">
+                        <i class="fa fa-files-o"></i>
+                      </button>
+                      <span title="{{item.cname}}"> {{item.cname}} </span>
+                    </td>
                     <td>{{ getRelativeDate(item.updated_at) }}</td>
                     <!--<td>
                     <div domain-staging-status ng-id="item.id"></div>
@@ -264,12 +267,18 @@
                       <a href="" ng-click="order('cert_name')">Certificate Name</a>
                       <span class="sortorder" ng-show="filter.predicate === 'cert_name'" ng-class="{reverse: filter.reverse}"></span>
                     </th>
-                    <th><a href="" ng-click="order('domains')">Domains</a>
-                      <span class="sortorder" ng-show="filter.predicate === 'domains'" ng-class="{reverse: filter.reverse}"></span></th>
-                    <th ng-if="auth.isRevadmin()"><a href="" ng-click="order('cert_type')">Cert Type</a>
-                      <span class="sortorder" ng-show="filter.predicate === 'cert_type'" ng-class="{reverse: filter.reverse}"></span></th>
-                    <th> <a href="" ng-click="order('expires_at')">Expires At</a>
-                      <span class="sortorder" ng-show="filter.predicate === 'expires_at'" ng-class="{reverse: filter.reverse}"></span></th>
+                    <th>
+                      <a href="" ng-click="order('domains')">Domains</a>
+                      <span class="sortorder" ng-show="filter.predicate === 'domains'" ng-class="{reverse: filter.reverse}"></span>
+                    </th>
+                    <th ng-if="auth.isRevadmin()">
+                      <a href="" ng-click="order('cert_type')">Cert Type</a>
+                      <span class="sortorder" ng-show="filter.predicate === 'cert_type'" ng-class="{reverse: filter.reverse}"></span>
+                    </th>
+                    <th>
+                      <a href="" ng-click="order('expires_at')">Expires At</a>
+                      <span class="sortorder" ng-show="filter.predicate === 'expires_at'" ng-class="{reverse: filter.reverse}"></span>
+                    </th>
                     <th>
                       <a href="" ng-click="order('updated_at')">Last Update</a>
                       <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
@@ -287,8 +296,8 @@
                     <td>
                       <!-- TODO: delete uisref -->
                       <a ng-href="#/ssl_certs/edit/{{item.id}}" uisref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit SSL Certificate">
-                  {{item.cert_name}}
-                </a>
+                        {{item.cert_name}}
+                      </a>
                     </td>
                     <td>
                       <div class="domains-alternative-names">{{item.domains}}</div>
@@ -440,15 +449,19 @@
                       <a href="" ng-click="order('zone')">Zone Name</a>
                       <span class="sortorder" ng-show="filter.predicate === 'zone'" ng-class="{reverse: filter.reverse}"></span>
                     </th>
-                    <th><a href="" ng-click="order('records_count')"># Of Records</a>
-                      <span class="sortorder" ng-show="filter.predicate === 'records_count'" ng-class="{reverse: filter.reverse}"></span></th>
+                    <th>
+                      <a href="" ng-click="order('records_count')"># Of Records</a>
+                      <span class="sortorder" ng-show="filter.predicate === 'records_count'" ng-class="{reverse: filter.reverse}"></span>
+                    </th>
                     <th>DNS Servers</th>
                     <th>
                       <a href="" ng-click="order('updated_at')">Last Update</a>
                       <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
                     </th>
-                    <th> <a href="" ng-click="order('updated_by')">Updated By</a>
-                      <span class="sortorder" ng-show="filter.predicate === 'updated_by'" ng-class="{reverse: filter.reverse}"></span></th>
+                    <th>
+                      <a href="" ng-click="order('updated_by')">Updated By</a>
+                      <span class="sortorder" ng-show="filter.predicate === 'updated_by'" ng-class="{reverse: filter.reverse}"></span>
+                    </th>
                     <th>Actions</th>
                     <th class="account" ng-if="auth.isReseller() ||  auth.isRevadmin()">
                       <a href="" ng-click="order('companyName')">Account</a>
@@ -461,12 +474,14 @@
                     <td>
                       <!-- TODO: change ui-sref to ng-href and delete uisref-->
                       <a ng-href="#/dns/zones/{{item.id}}/records" uisref="^.dns_zone_records({dns_zone_id: item.id})" ng-if="!item.loading" uib-tooltip="Manage Records">
-                  {{item.zone}}
-                </a>
+                        {{item.zone}}
+                      </a>
                     </td>
                     <td>{{item.records_count}}</td>
                     <td>
-                      <div ng-repeat="server in item.dns_servers">{{server}}<span ng-hide="$last">,</span></div>
+                      <div ng-repeat="server in item.dns_servers">{{server}}
+                        <span ng-hide="$last">,</span>
+                      </div>
                     </td>
                     <td>{{getRelativeDate(item.updated_at) }}</td>
                     <td>{{item.updated_by}}</td>
@@ -561,14 +576,14 @@
                   <tr ng-repeat="user in filteredRecords | limitTo:filter.limit:filter.skip track by $index" id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)">
                     <td>
                       <a ui-sref=".edit({id: user.user_id})" ng-if="!item.loading" uib-tooltip="Edit User Profile">
-                  {{user.firstname}}
-                </a>
+                        {{user.firstname}}
+                      </a>
                     </td>
                     <td>
                       <!-- TODO: delete uisref or set full state name-->
                       <a ng-href="#/users/edit/{{user.user_id}}" uisref=".edit({id: user.user_id})" ng-if="!item.loading" uib-tooltip="Edit User Profile">
-                  {{user.lastname}}
-                </a>
+                        {{user.lastname}}
+                      </a>
                     </td>
                     <td>{{user.email}}</td>
                     <td>{{user.role}}</td>
@@ -636,9 +651,9 @@
                       <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
                     </th>
                     <th>
-                        <a href="" ng-click="order('updated_at')">Updated By</a>
-                        <span class="sortorder" ng-show="filter.predicate === 'updated_by'" ng-class="{reverse: filter.reverse}"></span>
-                      </th>
+                      <a href="" ng-click="order('updated_at')">Updated By</a>
+                      <span class="sortorder" ng-show="filter.predicate === 'updated_by'" ng-class="{reverse: filter.reverse}"></span>
+                    </th>
                     <th>Actions</th>
                     <th class="account" ng-if="auth.isReseller() || auth.isRevadmin()">
                       <a href="" ng-click="order('account_id')">Account</a>
@@ -647,30 +662,34 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr ng-repeat="Group in filteredRecords | limitTo:filter.limit:filter.skip track by $index" id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)">
+                  <tr ng-repeat="group in filteredRecords | limitTo:filter.limit:filter.skip track by $index" id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)">
                     <td>
-                      <a ng-href="#/groups/edit/{{Group.id}}" ng-if="!item.loading" uib-tooltip="Edit Group Profile">
-                        {{Group.name}}
+                      <a ng-href="#/groups/edit/{{group.id}}" ng-if="!item.loading" uib-tooltip="Edit Group Profile">
+                        {{group.name}}
                       </a>
                     </td>
                     <td style="overflow-x: auto;">
-                      <span ng-show="!Group.users"><i class="glyphicon glyphicon-refresh spin"></i></span>
-                      <span ng-if="Group.users.count === 0">None</span>
-                      <span ng-repeat="user in Group.users.users">{{user.email || user.key_name}}{{ Group.users.users.indexOf(user) === Group.users.users.length - 1 ? null : ', '}}</span>
+                      <span ng-show="!group.users">
+                        <i class="glyphicon glyphicon-refresh spin"></i>
+                      </span>
+                      <span ng-if="group.users.count === 0">None</span>
+                      <div class="group_item" ng-repeat="user in group.users.users">{{user.email || user.key_name}}
+                        <span ng-if="!$last">,</span>
+                      </div>
                     </td>
-                    <td>{{ getRelativeDate(Group.updated_at) }}</td>
+                    <td>{{ getRelativeDate(group.updated_at) }}</td>
                     <td>
-                        {{Group.updated_by}}
+                      {{group.updated_by}}
                     </td>
                     <td class="actions">
-                      <a ng-href="#/groups/edit/{{Group.id}}" uib-tooltip="Edit Group">
+                      <a ng-href="#/groups/edit/{{group.id}}" uib-tooltip="Edit Group">
                         <i class="glyphicon glyphicon-pencil"></i>
                       </a>
                     </td>
                     <td ng-if="auth.isReseller() ||  auth.isRevadmin()">
-                      <a href="" ng-click="onGoToAccountInformation($event, Group)" ng-if="!item.loading" tooltip-placement="left" tooltip-append-to-body="{{true}}"
+                      <a href="" ng-click="onGoToAccountInformation($event, group)" ng-if="!item.loading" tooltip-placement="left" tooltip-append-to-body="{{true}}"
                         uib-tooltip="View Account Resources">
-                        <div class="company-names">{{Group.accountName}}</div>
+                        <div class="company-names">{{group.accountName}}</div>
                       </a>
                     </td>
                   </tr>
@@ -729,12 +748,14 @@
                     <td>
                       <!-- TODO: delete uisref or use full state name and delete ng-href-->
                       <a ng-href="#/keys/edit/{{item.id}}" uisref="index.accountSettings.keys.edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit API Key">
-                  {{item.key_name}}
-                </a>
+                        {{item.key_name}}
+                      </a>
                     </td>
                     <td>
                       <button class="btn btn-primary" clipboard text="item.key" on-copied="copyCallback()" on-error="copyCallback(err)" style="vertical-align: initial;"
-                        uib-tooltip="Click to copy the key to the clipboard" tooltip-placement="top"><i class="fa fa-files-o"></i></button>
+                        uib-tooltip="Click to copy the key to the clipboard" tooltip-placement="top">
+                        <i class="fa fa-files-o"></i>
+                      </button>
                       <button class="btn btn-primary" ng-click="switchKeyVisibility(item)" ng-hide="item.showKey" style="vertical-align: initial;">Show API Key</button>
                       <input ng-if="item.showKey" ng-blur="switchKeyVisibility(item)" class="form-control" value="{{item.key}}" style="width: 300px; display: inline-block; position: absolute; z-index: 999; margin-left: 4px;"
                         focus-me="item.showKey">
@@ -795,16 +816,20 @@
                       <a href="" ng-click="order('job_name')">Job Name</a>
                       <span class="sortorder" ng-show="filter.predicate === 'job_name'" ng-class="{reverse: filter.reverse}"></span>
                     </th>
-                    <th><a href="" ng-click="order('source_type')">Source</a>
+                    <th>
+                      <a href="" ng-click="order('source_type')">Source</a>
                       <span class="sortorder" ng-show="filter.predicate === 'source_type'" ng-class="{reverse: filter.reverse}"></span>
                     </th>
-                    <th><a href="" ng-click="order('sourceName')">Source Name</a>
+                    <th>
+                      <a href="" ng-click="order('sourceName')">Source Name</a>
                       <span class="sortorder" ng-show="filter.predicate === 'sourceName'" ng-class="{reverse: filter.reverse}"></span>
                     </th>
-                    <th> <a href="" ng-click="order('destination_type')">Destination</a>
+                    <th>
+                      <a href="" ng-click="order('destination_type')">Destination</a>
                       <span class="sortorder" ng-show="filter.predicate === 'destination_type'" ng-class="{reverse: filter.reverse}"></span>
                     </th>
-                    <th> <a href="" ng-click="order('destination_host')">Host</a>
+                    <th>
+                      <a href="" ng-click="order('destination_host')">Host</a>
                       <span class="sortorder" ng-show="filter.predicate === 'destination_host'" ng-class="{reverse: filter.reverse}"></span>
                     </th>
                     <th>
@@ -827,8 +852,8 @@
                     <td>
                       <!-- TODO: delete uisref -->
                       <a ng-href="#/logshippers/edit/{{item.id}}" uisref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit Job">
-                  {{item.job_name}}
-                </a>
+                        {{item.job_name}}
+                      </a>
                     </td>
                     <td>{{sourceTypes[item.source_type]}}
                     </td>
@@ -934,7 +959,7 @@
                     <td>
                       {{acc.createdBy}}
                     </td>
-                    <td>{{getRelativeDate(acc.updated_at)}}</td>                    
+                    <td>{{getRelativeDate(acc.updated_at)}}</td>
                   </tr>
                 </tbody>
               </table>
@@ -942,7 +967,7 @@
               <crud-pagination></crud-pagination>
             </div>
           </section>
-          </div>
+        </div>
       </div>
     </div>
   </div>
