--- a/code/dev/parts/groups/edit.html
+++ b/code/dev/parts/groups/edit.html
@@ -37,7 +37,7 @@
           <div class="form-group" ng-class="{'has-error': createForm.accountId.$invalid && createForm.accountId.$dirty}" ng-if="auth.isReseller() || auth.isRevadmin()">
             <label for="company" class="col-sm-2 control-label">Account *</label>
             <div class="col-sm-10">
-              <span ng-show="!_loading && companies.length==0" class="loader--waite-company">
+              <span ng-show="_loading && companies.length==0" class="loader--waite-company select2-container">
                 <i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
               <ui-select ng-if="!_loading && companies.length>0" ng-animate-disabled theme="select2" ng-disabled="_loading" ng-model="model.account_id"
                 id="company" name="accountId">
@@ -49,8 +49,8 @@
               <label for="company" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Select here account the Group should be associated with">
                 <i class="fa fa-question-circle"></i>
               </label>
-              <a ui-sref="{{auth.hasAccessTo('accounts') ? 'index.accountSettings.companies' : '.'}}" class="btn btn-sm btn-primary" id="btn-manage-accounts" uib-tooltip="Manage Accounts"
-                ng-disabled="_loading || !auth.hasAccessTo('accounts')">
+              <a ui-sref="{{auth.hasAccessTo('accounts') ? 'index.accountSettings.companies' : '.'}}" class="btn btn-sm btn-primary" id="btn-manage-accounts"
+                uib-tooltip="Manage Accounts" ng-disabled="_loading || !auth.hasAccessTo('accounts')">
                 <i class="fa fa-list-alt"></i> Manage Accounts</a>
             </div>
           </div>
@@ -59,19 +59,15 @@
             <label for="name" class="col-sm-2 control-label">Users In Group</label>
             <div class="col-sm-10">
               <span ng-if="!users || user.count === 0">None</span>
-              <span ng-repeat="user in users.users">
-                <a ng-if="user.key_name" ui-sref="index.accountSettings.keys.edit({id: user._id})" uib-tooltip="Edit API Key">
-                  {{user.key_name}}
-                </a>
-                <a ng-if="user.email" ui-sref="index.accountSettings.users.edit({id: user.user_id})" uib-tooltip="Edit User">
-                  {{user.email}}
-                </a>
-                {{ users.users.indexOf(user) === users.users.length - 1 ? '' : ', ' }}
-              </span>
+              <div class="group-users-list control-label" ng-repeat="user in users.users">
+                <a class="group_item" ng-if="user.key_name" ui-sref="index.accountSettings.keys.edit({id: user._id})" uib-tooltip="Edit API Key">{{user.key_name}}</a>
+                <a class="group_item" ng-if="user.email" ui-sref="index.accountSettings.users.edit({id: user.user_id})" uib-tooltip="Edit User">{{user.email}}</a>
+                <span ng-if="!$last">,</span>
+              </div>
             </div>
           </div>
           <hr>
-          <permissions pagetype="group" ng-controller="PermissionsController"></permissions>            
+          <permissions pagetype="group" ng-controller="PermissionsController"></permissions>
           <hr>
           <!-- passwords commented out because of invitation system -->
           <!-- <div class="form-group" ng-class="{'has-error': createForm.password.$invalid && createForm.password.$dirty}">
@@ -106,7 +102,7 @@
               <div class="form-group col-md-12">
                 <textarea id="comment" placeholder="Comment (300 characters max)" ng-maxlength="300" class="form-control inline-block" name="comment"
                   ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading">
-                  </textarea>
+                </textarea>
                 <label for="comment" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Comment about the Group (300 characters max)">
                   <i class="fa fa-question-circle"></i>
                 </label>
