Polish for Traffic Alerts forms

--- a/code/dev/parts/domains/domain-bot-protection-list/modals/confirmAddNewBotProtectionLocation.tpl.html
+++ b/code/dev/parts/domains/domain-bot-protection-list/modals/confirmAddNewBotProtectionLocation.tpl.html
@@ -3,7 +3,7 @@
 </div>
 <div class="modal-body">
   <form class="form-horizontal" name="newLocationForm">
-    <div class="form-group"><label class="col-sm-12"> Please enter new Location Name for create:</label></div>
+    <div class="form-group"><label class="col-sm-12"> Please enter new Location Name to create:</label></div>
     <div class="form-group" ng-class="{ 'has-error': newLocationForm.botProtectionLocation.$invalid && newLocationForm.botProtectionLocation.$dirty }">
       <div class="col-sm-12">
         <input type="text" autofocus class="form-control inline-block" ng-disabled="_loading" ng-model="newLocationName" name="botProtectionLocation"
