--- a/code/dev/parts/notifications/modals/confirm-add-new-notification-list.tpl.html
+++ b/code/dev/parts/notifications/modals/confirm-add-new-notification-list.tpl.html
@@ -3,7 +3,7 @@
 </div>
 <div class="modal-body">
   <form class="form-horizontal" name="newNotificationListForm">
-    <div class="form-group"><label class="col-sm-12"> Please enter new  Notification List Name for create:</label></div>
+    <div class="form-group"><label class="col-sm-12"> Please enter new Notification List name to create:</label></div>
     <div class="form-group" ng-class="{ 'has-error': newNotificationListForm.notificationListName.$invalid && newNotificationListForm.notificationListName.$dirty }">
       <div class="col-sm-12">
         <input type="text" autofocus class="form-control inline-block" ng-disabled="_loading" ng-model="newLocationName" name="notificationListName"
