--- a/code/dev/parts/domains/domain-wallarm-waf/modals/confirm-add-new-wallarm-location.tpl.html
+++ b/code/dev/parts/domains/domain-wallarm-waf/modals/confirm-add-new-wallarm-location.tpl.html
@@ -4,7 +4,7 @@
 <div class="modal-body">
   <form class="form-horizontal" name="newLocationForm">
     <div class="form-group">
-      <label class="col-sm-12"> Please enter new Location Name for create:</label>
+      <label class="col-sm-12"> Please enter new Location Name to create:</label>
     </div>
     <div class="form-group" ng-class="{ 'has-error': newLocationForm.wallarmLocation.$invalid && newLocationForm.wallarmLocation.$dirty }">
       <div class="col-sm-12">
