--- a/code/dev/parts/trafficAlerts/new.html
+++ b/code/dev/parts/trafficAlerts/new.html
@@ -26,7 +26,7 @@
             <div class="col-sm-10">
               <input type="text" autofocus class="form-control inline-block" id="name" name="name" placeholder="Name" ng-model="model.name"
                 ng-maxlength="64" ng-disabled="_loading" required>
-              <label for="name" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="The configuration's name, this name will be the alert's title.">
+              <label for="name" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Specify here the name of the new alert">
                 <i class="fa fa-question-circle"></i>
               </label>
               <div class="error-messages" ng-messages="createForm.name.$error" role="alert" ng-messages-multiple>
@@ -47,7 +47,7 @@
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
-              <label for="company" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Select the primary account the configuration should be associated with">
+              <label for="company" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Select the customer account the alert should be associated with">
                 <i class="fa fa-question-circle"></i>
               </label>
               <a ui-sref="index.accountSettings.companies" class="btn btn-sm btn-primary" id="btn-manage-accounts" uib-tooltip="Manage Accounts"
@@ -62,7 +62,7 @@
                 ng-options="name as key for (name,key) in targetTypes" required>
                 <option disabled value="">--- Select Target Type ---</option>
               </select>
-              <label for="target_type" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Select the configuration's target type.">
+              <label for="target_type" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Select the type of target to monitor">
                 <i class="fa fa-question-circle"></i>
               </label>
               <div class="error-messages" ng-messages="createForm.target_type.$error" role="alert" ng-messages-multiple>
@@ -82,7 +82,7 @@
                   <div ng-bind-html="item.domain_name|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
-              <label for="target" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Select the configuration's target, the alerts will be dispatched when the target meets the configuration.">
+              <label for="target" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Select a target (domain or app) to monitor">
                 <i class="fa fa-question-circle"></i>
               </label>
               <div class="error-messages" ng-messages="createForm.target.$error" role="alert" ng-messages-multiple>
@@ -103,7 +103,7 @@
                   <div ng-bind-html="item.list_name|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
-              <label for="company" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Select the configuration's notifications list, the alerts will be dispatched via the notifications list configuration.">
+              <label for="company" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Select a notification list which will be used to send notifications about triggered alerts">
                 <i class="fa fa-question-circle"></i>
               </label>
               <a ui-sref="index.accountSettings.notificationsList" class="btn btn-sm btn-primary" id="btn-manage-notif-lists" uib-tooltip="Manage Notifications Lists"
@@ -122,7 +122,8 @@
                 ng-options="name as key for (name,key) in ruleTypes" required>
                 <option disabled value="">--- Select Rule Type ---</option>
               </select>
-              <label for="rule_type" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Select the configuration's rule type.">
+              <label for="rule_type" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
+                uib-popover="Select the type of rule to configure. 'Spike' rules are useful to monitor changes in traffic level in a period of time relative to the previos period of time; 'Status Code Frequency' rules normally used to alert when the frequency of specified HTTP response code is exceeding a threshold for a defined period of time.">
                 <i class="fa fa-question-circle"></i>
               </label>
               <div class="error-messages" ng-messages="createForm.rule_type.$error" role="alert" ng-messages-multiple>
